# weightanalysisapp

./: .gitignore  LICENSE  README.md  grippers.csv  proximity_sensors.csv  pyproject.toml  sensors.csv  tactile_sensors.csv
database/: gripper.db
interface/: app.py  gripper_app.py  manual_app.py  sensor_app.py  ui.py
src/weightapp/: crud.py  main.py  models.py  utils.py
tests/: test_openai.py
